<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_url"
        android:id="@+id/dialog_download_add_url_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/dialog_download_add_url"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/dialog_download_add_filename_title"
        android:layout_alignEnd="@+id/dialog_download_add_filename_title"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_download_add_url"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/dialog_download_add_url_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_filename"
        android:id="@+id/dialog_download_add_filename_title"
        android:layout_below="@+id/dialog_download_add_url_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/dialog_download_add_filename"
        android:gravity="center_vertical" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_download_add_filename"
        android:layout_below="@+id/dialog_download_add_url"
        android:layout_alignRight="@+id/dialog_download_add_url"
        android:layout_alignEnd="@+id/dialog_download_add_url"
        android:layout_toRightOf="@+id/dialog_download_add_url_title"
        android:layout_toEndOf="@+id/dialog_download_add_url_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dialog_category"
        android:id="@+id/dialog_download_add_category_title"
        android:layout_below="@+id/dialog_download_add_filename_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/dialog_download_add_filename"
        android:layout_toStartOf="@+id/dialog_download_add_filename" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_download_add_category"
        android:layout_alignTop="@+id/dialog_download_add_category_title"
        android:layout_toRightOf="@+id/dialog_download_add_category_title"
        android:layout_toEndOf="@+id/dialog_download_add_category_title"
        android:spinnerMode="dialog" />

</RelativeLayout>